--- a/src/edu/hitsz/swing/chooseDifficulty.form
+++ b/src/edu/hitsz/swing/chooseDifficulty.form
@@ -9,7 +9,7 @@
     <border type="none"/>
     <children>
       <grid id="1a01f" binding="topPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+        <margin top="70" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -21,7 +21,9 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font size="24" style="1"/>
+              <enabled value="true"/>
+              <font size="36" style="1"/>
+              <hideActionText value="false"/>
               <text value="简单模式"/>
             </properties>
           </component>
@@ -30,7 +32,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font size="24" style="1"/>
+              <font size="36" style="1"/>
               <text value="普通模式"/>
             </properties>
           </component>
@@ -39,14 +41,14 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font size="24" style="1"/>
+              <font size="36" style="1"/>
               <text value="困难模式"/>
             </properties>
           </component>
         </children>
       </grid>
       <grid id="af561" binding="buttomPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+        <margin top="0" left="100" bottom="50" right="100"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -58,6 +60,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font size="32"/>
               <model>
                 <item value="开"/>
                 <item value="关"/>
@@ -69,7 +72,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font size="20" style="1"/>
+              <font size="32" style="1"/>
               <foreground color="-16777216"/>
               <text value="音效"/>
             </properties>
