--- a/src/edu/hitsz/swing/scoreList.form
+++ b/src/edu/hitsz/swing/scoreList.form
@@ -36,7 +36,7 @@
           </vspacer>
         </children>
       </grid>
-      <grid id="f1f6f" binding="buttomPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="f1f6f" binding="buttomPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -56,9 +56,19 @@
           </component>
           <vspacer id="ac470">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
+          <component id="a7cba" class="javax.swing.JButton" binding="reStartButton">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font size="18"/>
+              <foreground color="-16777216"/>
+              <text value="重   新   开   始"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <component id="39620" class="javax.swing.JLabel" binding="headerLabel">
